# goFish

./: .dockerignore  .gitignore  .gitignore~  .travis.yml  BoxAPI.go  BoxSDK.go  Calibrate  Database.go  Dockerfile  Doxyfile  FishFinder  GoFish  GoFish.go  Jenkinsfile  LICENSE  README.md  Server.go  build  build.sh  document.sh  findFishy  go.sum  run_tests.sh  setup  setup.sh  test.cc
CameraCalibration/: CMakeLists.txt
CameraCalibration/src/: Calibration.cc  main.cc
CameraCalibration/src/includes/: Calibration.h
findFish/: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt~  Doxyfile  Readme.md  findFish.cc
findFish/docs/html/: _calibration_8h_source.html  _event_detector_8h_source.html  _json_builder_8h_source.html  _tracker_8h_source.html  annotated.html  class_activity_event-members.html  class_activity_event.html  class_calibration-members.html  class_calibration.html  class_event_builder-members.html  class_event_builder.html  class_j_s_o_n-members.html  class_j_s_o_n.html  class_q_r_event-members.html  class_q_r_event.html  class_tracker-members.html  class_tracker.html  classes.html  dir_0fc3f8f3ef96ce2d45d66d6e29832317.html  dir_138840999420311c41995bc8e012123d.html  dir_2e82ce6d8ecbec33898d4e3f0c7c62b1.html  dir_3ae305ba6a237077d0294f26057b4f86.html  dir_3cb414d81fc6043cbd071564006b9f6e.html  dir_3ff8134926c149b6204de6ad9f4f2204.html  dir_4fe9de3cdb3b8e1ece5fcaeb656baf24.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5072735cdab52e20c0e966d6fbe64d9d.html  dir_54196081a6b99707e391417e015e8914.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6dafcf072eb3ca3433fd890a600d1601.html  dir_9d341f830dc53c21c5370e35818c2bcc.html  dir_a26b0601da2ccb598a622264fcdc88ce.html  dir_b4bd437b19e8c55c1179ecbf19f5d225.html  dir_c6e66c8bf836e16b578195f12f533a05.html  dir_d8f381a0b77e017d7215fb6cbc9ce255.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  (+11 more)
findFish/docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+23 more)
findFish/docs/latex/: annotated.tex  class_activity_event.eps  class_activity_event.tex  class_calibration.tex  class_event_builder.eps  class_event_builder.tex  class_j_s_o_n.tex  class_q_r_event.eps  class_q_r_event.tex  class_tracker.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  md_find_fish__readme.tex  refman.tex  struct_calibration_1_1_input.tex  struct_calibration_1_1_result.tex  struct_tracker_1_1_settings.tex
findFish/resources/: Calibration.cc  Camera.cc  EventDetector.cc  JsonBuilder.cc  JsonBuilder.h  Processor.cc  SingleCalibrator.cc  StereoCalibrator.cc  Tracker.cc
findFish/resources/includes/: Calibration.h  EventDetector.h  JsonBuilder.h  Processor.h  Tracker.h
tests/: CMakeLists.txt  test_calibration.cc  test_events.cc  test_json.cc  test_main.cc  test_processor.cc  test_tracker.cc
tests/headers/: test_calibration.h  test_events.h  test_json.h  test_processor.h  test_tracker.h
(+52 files in other folders)
